objects/Cash_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Account_Id__c</fullName>
        <label>AMS Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_CCT_Transaction_Id__c</fullName>
        <label>AMS CCT Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Request_Message__c</fullName>
        <label>AMS_Request_Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Response_Message__c</fullName>
        <label>AMS Response Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Result__c</fullName>
        <label>AMS Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBS_Account_Id__c</fullName>
        <label>EBS Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Invoice_Id__c</fullName>
        <label>EBS Invoice Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Operating_Unit_Id__c</fullName>
        <label>EBS Operating Unit Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Receipt_Id__c</fullName>
        <label>EBS Receipt Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Receipt_Number__c</fullName>
        <label>EBS Receipt Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Site_Use_Id__c</fullName>
        <label>EBS Site Use Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Cash Receipt</label>
    <nameField>
        <label>Cash Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>EBS_Account_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>